Fixes theme button placement on mobile

--- a/styles.css
+++ b/styles.css
@@ -285,8 +285,8 @@ button {
     }
 
     .theme-button {
-        top: 93.5%;
-        left: 25rem;
+        bottom: 40.8rem;
+        left: 1rem;
     }
 
     .menu-button {
